Fix event time getting cut off
In `dayGridMonth` view if event name is too long, the time gets cut off.

--- a/packages/daygrid/src/styles/daygrid-event.css
+++ b/packages/daygrid/src/styles/daygrid-event.css
@@ -12,6 +12,7 @@
 
   & .fc-event-time {
     font-weight: bold;
+    flex: none;
   }
 
   & .fc-event-time,
